--- a/planningandacquiring/templates/planningandacquiring/accomplishment_date.html
+++ b/planningandacquiring/templates/planningandacquiring/accomplishment_date.html
@@ -1,8 +1,8 @@
-{% extends "profiles/sidebar_um.html" %}
+{% extends "profiles/sidebar_reports.html" %}
 
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
-    <h3 class="ui header">{{ title }}</h3>
+    <h3>Generate Accomplishment Report</h3>
     {% if messages %}
         {% for message in messages %}
             <div class="ui green message" > {{ message }}</div>
@@ -10,17 +10,24 @@
     {% endif %}
 </div>
 
-     <form class="ui form" action="" method="POST">
+    <form class="ui form" action="" method="POST">
     {% csrf_token %}
-         <div class="two fields">
-            {{form.from_date}} to
-            {{form.to_date}}
-         </div>
-         <div class="ui basic center aligned segment">
-            <button onclick="return confirm('Are you sure?')" id = "btn" class = "ui button green" type="submit" >Submit</button>
+    <div class="ui basic segment">
+        <div class="ui three column very relaxed stackable center aligned grid">
+            <div class="column">
+                {{form.from_date}}
+            </div>
+            <div class="middle aligned column">
+                {{form.to_date}} 
+            </div>
+            <div class="ui vertical divider">
+                to
+            </div>
         </div>
-
-
+    </div>
+    <center>
+        <button onclick="return confirm('Are you sure?')" id = "btn" class = "ui button green" type="submit" >Submit</button>  
+    </center>
     </form>
 
 <script type="text/javascript">
