--- a/planningandacquiring/templates/planningandacquiring/accomplishment_report.html
+++ b/planningandacquiring/templates/planningandacquiring/accomplishment_report.html
@@ -1,14 +1,13 @@
-{% extends "profiles/sidebar_pa.html" %}
-
+{% extends "profiles/sidebar_reports.html" %}
+{% load humanize %}
 {% block content %}
+{% if messages %}
 <div class="ui inverted segment" style="padding:20px;">
-    <h3 class="ui header"></h3>
-    {% if messages %}
-        {% for message in messages %}
-            <div class="{{style}}" > {{ message }}</div>
-        {% endfor %}
-    {% endif %}
+    {% for message in messages %}
+        <div class="ui green message" > {{ message }}</div>
+    {% endfor %}
 </div>
+{% endif %}
 <div class="ui segment">
         <center>
         <br><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Philippine_Coast_Guard_%28PCG%29.svg/220px-Philippine_Coast_Guard_%28PCG%29.svg.png" width="100">
