--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -13,7 +13,7 @@
             <a class="item" href="{% url 'inventory:medicine_inventory_list'%}"><i class="warehouse icon"></i>Inventory</a>
             <a class="item" href="{% url 'profiles:user_list'%}"><i
             class="folder open icon"></i>Unit Management</a>
-            
+            <a class="item" href="{% url 'planningandacquiring:accomplishment_date'%}"><i class="folder open icon"></i>Reports</a>
             {% elif request.session.session_user_position == "Veterinarian" %}
             <a class="item" href="{% url 'profiles:vet_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
