--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
@@ -7,7 +7,7 @@
 <div class="ui ordered steps">
   <div class="completed step">
     <div class="content">
-      <div class="title">K9 Parents Form</div>
+      <div class="title">K9 Breeding Selection</div>
       <div class="description">Select K9 Parents</div>
     </div>
   </div>
