--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -14,6 +14,9 @@
                             <a href="{% url 'profiles:user_list'%}" class="item">
                                 <i class="address book icon"></i>User List
                             </a>
+                            <a href="{% url 'unitmanagement:classified_list'%}" class="item">
+                                <i class="clipboard list icon"></i>Classified List
+                            </a> 
                             <a href="#" class="item">
                                 <i class="clipboard list icon"></i>Damaged Equipment List
                             </a>
@@ -39,6 +42,10 @@
                             <a href="{% url 'unitmanagement:physical_exam_form'%}" class="item">
                                 <i class="heartbeat icon"></i>Physical Exam Form
                             </a>
+                            <a href="{% url 'unitmanagement:trained_list'%}" class="item">
+                                <i class="clipboard list icon"></i>Trained K9 List
+                            </a> 
+
                             <a href="{% url 'unitmanagement:unfit_list'%}" class="item">
                                 <i class="clipboard list icon"></i>Unfit K9 List
                             </a>
