--- a/profiles/templates/profiles/notification_list.html
+++ b/profiles/templates/profiles/notification_list.html
@@ -16,23 +16,40 @@
       
    
         <div class="ui very basic segment">
-            {% for notif_data in notif_data%}
-             {%if notif_data.viewed == True %}
-            <div class="ui orange message" style='opacity: 0.5;'>
-                <a href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">   
-                    {{notif_data.message}} 
-                </a>
-                <small style="float:right;">{{notif_data.datetime}}</small>
-            </div>
-              {%else%}
-            <div class="ui orange message">
-                <a href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">
-                    {{notif_data.message}}
-                </a>
-                <small style="float:right;">{{notif_data.datetime}}</small>
-            </div>
-            {%endif%}
-            {% endfor%}
+                {% for notif_data in notif_data%}
+                {%if notif_data.viewed == True %}
+                    <div class="ui orange message" style='opacity: 0.5;'>
+                        <div class="ui feed">
+                            <div class="event">
+                                <div class="content">
+                                <div class="date">
+                                        {{notif_data.datetime}}
+                                </div>
+                                <a class="summary" href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">
+                                        {{notif_data.message}}
+                                </a>
+                                </div>
+                            </div>
+                        </div>
+        
+                    </div>
+                {%else%}
+                <div class="ui orange message">
+                        <div class="ui feed">
+                            <div class="event">
+                                <div class="content">
+                                <div class="date">
+                                        {{notif_data.datetime}}
+                                </div>
+                                <a class="summary" href="{% url 'unitmanagement:redirect_notif' notif_data.id %}">
+                                        {{notif_data.message}}
+                                </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {%endif%}
+                {% endfor%}
         </div>
           
         
