--- a/profiles/templates/profiles/sidebar_training.html
+++ b/profiles/templates/profiles/sidebar_training.html
@@ -12,14 +12,11 @@
                         <a href="{% url 'training:training_records'%}" class="item">
                             <i class="folder open icon"></i>Training Records
                         </a>
-                        <a href="{% url 'training:classify_k9_list'%}" class="item">
-                            <i class="clipboard check icon"></i>Classify K9's
-                        </a>
                     {% endif %}
                     {% if request.session.session_user_position == "Trainer" %}
                         <a class="item"> <b>Training Menu</b></a>
                         <a href="{% url 'training:classify_k9_list'%}" class="item">
-                            <i class="clipboard check icon"></i>Classify K9's
+                            <i class="clipboard check icon"></i>K9 Classifications
                         </a>
                     {% endif %}
                 </div>
