--- a/unitmanagement/templates/unitmanagement/choose_handler_list.html
+++ b/unitmanagement/templates/unitmanagement/choose_handler_list.html
@@ -48,14 +48,12 @@
         {% csrf_token %}
         <div class="ui horizontal segments">
             <div class="ui segment">
-                <table class="ui celled inverted orange table" id = 'tabledata'>
-                    <thead>
-                        <th class="three wide"></th>
-                        <th>Name</th>
-                        <th class="three wide">EDD</th>
-                        <th>NDD</th>
-                        <th>SAR</th>
-                        <th>Failed</th>
+                <table class="ui column celled inverted orange table" id = 'tabledata'>
+                    <thead class="center aligned">
+                        <th class="two wide"></th>
+                        <th class="eight wide">Name</th>
+                        <th class="three wide">Passed/All K9 Trained</th>
+                        <th class="three wide">{{k9.capability}} Success Rating</th>
                     </thead>
                     <tbody>
                         {% for a in form.handler %}
@@ -63,10 +61,8 @@
                         <tr>
                             <td class="center aligned">{{a.tag}}</td>
                             <td>{{a.choice_label}}</td>
-                            <td>{{g.0}}</td>
-                            <td>{{g.1}}</td>
-                            <td>{{g.2}}</td>
-                            <td>{{g.3}}</td>
+                            <td  class="center aligned">{{g.0}}/{{g.1}}</td>
+                            <td  class="center aligned">{{g.2}}%</td>
                         </tr>
                         {%endif%}{% endfor %}
                         {% endfor %}
@@ -87,27 +83,25 @@
 
     $(document).ready(function() {
         $('#tabledata').DataTable({
-        "order": [[ 2, "desc" ]]
+        "order": [[ 3, "desc" ]]
+        });
+
+        $("input[name='handler']").change(function () {
+        var url = 'ajax_load_handler';  // get the url of the `load_handler` view
+        var handlerId = $("input[name='handler']:checked"). val(); // get the selected handler ID from the HTML input
+
+        $.ajax({                       // initialize an AJAX request
+            url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-handler/)
+            data: {
+            'handler': handlerId       // add the handler id to the GET parameters
+            },
+            success: function (data) {   // `data` is the return of the `load_handler` view function
+            $("#id_handler_data").html(data);  // replace the contents of the #id_handler_data input with the data that came from the server
+            }
+        });
+
         });
     });
 </script>
-
-<script>
-    $("input[name='handler']").change(function () {
-      var url = 'ajax_load_handler';  // get the url of the `load_handler` view
-      var handlerId = $("input[name='handler']:checked"). val(); // get the selected handler ID from the HTML input
-
-      $.ajax({                       // initialize an AJAX request
-        url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-handler/)
-        data: {
-          'handler': handlerId       // add the handler id to the GET parameters
-        },
-        success: function (data) {   // `data` is the return of the `load_handler` view function
-          $("#id_handler_data").html(data);  // replace the contents of the #id_handler_data input with the data that came from the server
-        }
-      });
-
-    });
-  </script>
 
  {% endblock %}
