--- a/deployment/templates/deployment/schedule_units.html
+++ b/deployment/templates/deployment/schedule_units.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="ui inverted segment" style="padding:20px;">
-    <h1 class="ui header">Schedule Units for Deployment
+    <h1 class="ui inverted header">Schedule Units for Deployment
      <div class="sub header">Schedule units for initial deployment</div></h1>
     {% if messages %}
         {% for message in messages %}
@@ -21,7 +21,7 @@
     <i class="question icon"></i>Scheduling K9s for Initial Deployment
   </div>
   <ul class="list">
-      <li>Below is a list of ports where all K9s ready for deployment are already distributed with regard port requirements.</li>
+      <li>Below is a list of ports where all K9s ready for deployment are already distributed with regard to port requirements.</li>
       <li>Pick a date for each port, dates should atleast have 1 week allowance to allow fullfillment of pre-deployment requirements.</li>
       <li>Press submit to schedule initial deployment!</li>
       <li>Pending K9s cannot yet be scheduled right now because of port requirements, come back when there are more k9s available for deployment.</li>
@@ -39,7 +39,7 @@
                 <th rowspan="2">Maritime Count</th>
                 <th rowspan="2">Incident Count</th>
                 <th rowspan="2">Incident Order List</th>
-                <th rowspan="2">K9s Assigned</th>
+                <th rowspan="2">K9s to be Deployed</th>
                 <th colspan="3">K9s Deployed / K9s Required</th>
                 <th rowspan="2">Deployment Date</th>
             </tr>
@@ -67,7 +67,7 @@
 
 
                         <td> <div class="ui bulleted list">{% for item in location.Temp_list %}
-                            <div class="item">{{item.k9}}</div>
+                            <div class="item">{{item.k9}} | {{item.k9.capability}}</div>
                         {% endfor %}
                        </div> </td>
 
@@ -85,31 +85,90 @@
 </table>
 
      <div class="ui right aligned segment" style="padding: 0px;">
-        <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Submit</button>
+        <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Set Deployment Dates</button>
     </div>
 
      {{formset.management_form}}
     </form>
 
 
+<div class="ui basic segment" style="border-style: none;">
+    <label><h3>No. of K9s Done with Training:</h3></label>
+           <table class="ui three column celled blue table">
+             <thead>
+               <tr>
+                 <th>EDD</th>
+                 <th>NDD</th>
+                 <th>SAR</th>
+               </tr>
+             </thead>
+             <tbody>
+               <tr>
+                 <td>{{edd_done}}</td>
+                 <td>{{ndd_done}}</td>
+                 <td>{{sar_done}}</td>
+               </tr>
+             </tbody>
+           </table>
+         </div>
+
+<div class="ui top attached tabular menu">
+     <a class="item active" data-tab="first">Pending for Deployment</a>
+           <a class="item" data-tab="second">K9s on Training</a>
+</div>
+
+<div class="ui tab segment active" data-tab="first">
 <div class = "ui segment">
-Pending for Deployment
-    <table class="ui celled table">
+    <h3>Pending for Deployment</h3>
+    <table id="tabledata2" class="ui celled table">
         	<thead>
           	<tr>
                 <th>K9</th>
+                <th>Capability</th>
                 <th>Handler</th>
+                <th></th>
             </tr>
             </thead>
         <tbody>
 {% for item in can_deploy %}
   <tr>
-<td>{{item}} {{item.capability}} </td>
+      <td>{{item}}</td>
+      <td>{{item.capability}} </td>
       <td>{{item.handler}}</td>
+      <td><center><button class = "ui blue button">Assign</button></center></td>
   </tr>
 {% endfor%}
         </tbody>
     </table>
+</div>
+</div>
+
+<div class="ui tab segment" data-tab="second">
+<table id="tabledata3" class="ui celled table">
+
+    <thead>
+    <tr>
+        <th>K9</th>
+        <th>Capability</th>
+        <th>Training Stage</th>
+        <th>Average Training Time per Stage</th>
+        <th>Estimate Number of Days Before Training Ends</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    {% for idx, train in train_df.iterrows %}
+    <tr>
+        <td> {{train.K9}} </td>
+        <td> {{train.K9.capability}} </td>
+        <td> {{train.K9.training_level}}</td>
+        <td> {{train.Duration}} days</td>
+        <td>{{train.End_Estimate}}  days</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+
+</table>
 </div>
 
 
@@ -120,10 +179,37 @@ Pending for Deployment
     <div class="header">
       No units available
     </div>
-    <p>There are no units available to be deployed right now based on current port requirement. Come back later!</p>
+    <p>There are no units available to be deployed right now based on current port requirements. Come back later!</p>
   </div>
 </div>
 {% endif %}
 
 
-{% endblock%}
+
+
+
+<script type="text/javascript">
+
+    $(document).ready(function() {
+
+        $('#tabledata2').DataTable();
+        $('#tabledata3').DataTable({
+              "order": [[ 4, "desc" ]]
+        });
+         $('#tabledata4').DataTable();
+        $('.menu .item').tab();
+    });
+
+
+$('.message .close')
+  .on('click', function() {
+    $(this)
+      .closest('.message')
+      .transition('fade')
+    ;
+  })
+;
+</script>
+{% endblock %}
+
+
