--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -20,10 +20,10 @@
                         <div class="ui raised segment">
                           <div class="ui statistic">
                             <div class="value">
-                              <i class="plane icon"></i> 5
+                              <i class="green check icon"></i>
                             </div>
                             <div class="label">
-                              Flights
+                              Daily Refresher
                             </div>
                           </div>
                         </div>
@@ -35,7 +35,7 @@
                                 <i class="plane icon"></i> 5
                               </div>
                               <div class="label">
-                                Flights
+                                Sample Item
                               </div>
                             </div>
                           </div>
@@ -47,12 +47,63 @@
                                 <i class="plane icon"></i> 5
                               </div>
                               <div class="label">
-                                Flights
+                                Sample Item
                               </div>
                             </div>
                           </div>
                     </div>
                   </div>
+
+                    {% if k9 %}
+                    <div class = "ui segment" id = "start_end_training">
+                    <table class="ui very basic four column table">
+                    <thead>
+                    <tr>
+                    <th>Status: {{k9.training_status}}</th>
+                    <th>Type: {{k9.status}}</th>
+                    <th>Capability: {{k9.capability}}</th>
+
+                        {% if k9.training_level %}
+                    <th>Training Stage: {{k9.training_level}} </th>
+
+                        <th><h3>Training</h3><div><strong>Date Start :</strong> {{training_sched.date_start}}</div>
+                            <div><strong>Date End :</strong> {{training_sched.date_end}}</div></th>
+
+                        {% else %}
+
+
+                        {% endif %}
+                    </tr>
+                    </thead>
+                    </table>
+
+                        {% if k9.training_level %}
+                        <form class="ui form" method="POST">
+                            {% csrf_token %}
+
+                            {% if show_start == True and show_end == False %}
+                            <input class = "ui green button" type="submit" name = "start_training" value="Start Training">
+
+                            {% elif show_start == False and show_end == True %}
+                            <input class = "ui green button" type="submit" name = "end_training" value="End Training">
+
+                            {% elif show_start == True and show_end == True%}
+                            <h3 class = "ui blue header">Pending grade for current training stage.</h3>
+                            {% else %}
+                            {% endif %}
+
+                        </form>
+                        {% endif %}
+
+                        </div>
+                        {% else %}
+                        <div class = "ui segment">
+                            You don't have a K9 yet.
+                        </div>
+                        {% endif %}
+
+
+
                   <div class="ui raised segment" >
                       <canvas id="myChart" height="355" ></canvas>
                   </div>
@@ -306,19 +357,18 @@ $(document).ready(function() {
           eventLimit: true,
           showNonCurrentDates: true,
 
-          eventBorderColor: "orange",
-          eventBackgroundColor: "orangered",
+
           eventTextColor: "white",
           nowIndicator: true,
 
           events: [
                 {% for i in events %}
                 {
-                    id: "{{ i.id }}",
-                    title: "{{ i.event_name}} - {{ i.location}}",
+                     id: '{{ i.id }}',
+                    title: '{{i.event_name}}',
                     start: '{{ i.start_date|date:"Y-m-d" }}',
                     end: '{{ i.end_date|date:"Y-m-d" }}',
-                    allDay: '{{ i.all_day|lower }}',
+                    allDay: 'true',
                 },
                 {% endfor %}
 
